# Komiix-Full-Stack

./: .gitignore  README.md  anuncio_komiix.txt  docker-compose.yml  package-lock.json
.github/workflows/: daily-deploy.yml
backend/: .env.example  CLEANUP_CHECKLIST.md  Dockerfile  README.md  cleanup_legacy.sh  docker-run.sh  podman-helper.sh  pyproject.toml  requirements.txt  server.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/core/: config.py  logging.py
backend/app/repositories/: cache_repository.py  file_repository.py  metadata_repository.py
backend/app/schemas/: ocr.py  text_coordinates.py  translate.py
backend/config/: fonts_metadata.json  logging_config.py  model_metadata.json  supabase_config.py
backend/data/: fonts_metadata.json
backend/dependencies/: auth.py
backend/endpoints/: fonts.py  models.py  ocr.py  translate.py
backend/lib/: text_centralization.py
backend/lib/manga_ocr/: __init__.py  config.py  detector.py  detector_config.py  detector_model.py  detector_preprocessor.py  main.py  model.py  preprocessor.py  requirements.txt  text_block.py
backend/manga_ocr_japanese/: config.py  ocr.py
backend/scripts/: fragment_models.py
backend/wasm/: reconstruct_model.c  reconstruct_model.js  reconstruct_model.wasm
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/public/: ads.txt  robots.txt  sitemap.xml
frontend/src/: App.jsx  index.css
libretranslate/: .env.template  Dockerfile  README.md  pyproject.toml
(+321 files in other folders)
