[tool.poetry]
name = "libretranslate-service"
version = "1.0.0"
description = "LibreTranslate service for Komiix"
authors = ["Komiix Team"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
libretranslate = "^1.3.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
